<resources>
    <string name="app_name">MyBuyDeals</string>

    <string name="enter_login_id_hint">Email or Mobile Number</string>
    <string name="enter_password_hint">Password</string>
    <string name="login">Sign In</string>
    <string name="sign_up_text"> Dont have an account - <b><font fgcolor='#ed1c94'> Sign up...?</font></b></string>
    <string name="exit">Exit!</string>
    <string name="exit_confirm">Are you sure you want to exit?</string>
    <string name="yes">YES</string>
    <string name="no">No</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="no_connection">Not connected to Internet!!!</string>
    <string name="rupees">\u20B9</string>

</resources>
